<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dacofa</string>
    <string name="id_pengguna">USER ID</string>
    <string name="kata_sandi">PASSWORD</string>
    <string name="masuk">login</string>
    <string name="lupa_password">Forgot Password</string>
    <string name="copyright_2021">Copyright 2021</string>
    <string name="dacofa">Dacofa</string>
    <string name="lihat_data">View Data</string>
    <string name="isi_data">Entry Data</string>
    <string name="bahasa">Language</string>
    <string name="kg" translatable="false">KG</string>
    <string name="per_kg" translatable="false">/KG</string>

    <string name="data_collection_of_fishery_activity" translatable="false">Data Collection of Fishery Activity</string>
    <string name="tanggal">Date</string>
    <string name="inch">Inch</string>
    <string name="unit">Unit</string>
    <string name="jumlah_alat_tangkap">Amount of Fishing Gear</string>
    <string name="ukuran_jaring">Mesh Size</string>
    <string name="alat_tangkap">Fishing Gear</string>
    <string name="provinsi">Province</string>
    <string name="pilih_provinsi">-- Choose Province --</string>
    <string name="pilih_kabupaten">-- Choose District --</string>
    <string name="kabupaten">District</string>
    <string name="jam">Hour</string>
    <string name="lama_operasi">Operation Type</string>
    <string name="lainnya">Others</string>
    <string name="harga">Price</string>
    <string name="total_tangkapan">Total Catch</string>
    <string name="nama_ikan">Name of Fish</string>
    <string name="mata_uang">Currency</string>
    <string name="isi_data_nselanjutnya">Save</string>
    <string name="data_nsebelumnya">Previous\nData</string>
    <string name="negara">Country</string>

    <string-array name="currency">
        <item>Indonesian Rupiah (IDR)</item>
        <item>Malaysian Ringgit (MYR)</item>
    </string-array>

    <string-array name="area">
        <item>Sungai</item>
        <item>Rawa</item>
        <item>Danau</item>
        <item>Waduk</item>
        <item>Estuari</item>
    </string-array>
    <string-array name="peruntukan">
        <item>Pribadi</item>
        <item>Dijual</item>
    </string-array>
    <string name="area_penangkapan">Fishing Ground</string>
    <string name="ok" translatable="false">OK</string>
    <string name="search">Search</string>
    <string name="choose_country">--Choose Country--</string>
    <string name="choose_countries">Choose Country</string>
    <string name="choose_pro">Choose Province</string>
    <string name="choose_district">Choose District</string>
    <string name="location">Location</string>
    <string name="please_fill_all">Please fill all columns</string>
    <string name="choose_fish_name">Choose the Fish Name</string>
    <string name="need_to_validate">Need to Validate</string>
    <string name="valid">Valid</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="validate">Validate</string>
    <string name="delete_data">delete this data?</string>
    <string name="confirm">Confirmation</string>
    <string name="catch_result">Catch Result</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add">Add</string>
    <string name="use_for">Use for</string>
    <string name="_0" translatable="false">0</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="no_data_available">No Data Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="data_synced_successfully">data synced successfully</string>
    <string name="unable_to_sync">Unable to sync when catch results is empty</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="wait">please wait…</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait_nwhile_we_downloading_some_data_nmake_sure_you_ve_an_active_connection">Please wait while we are downloading some data.\n Make sure you\'ve an active connection</string>
    <string name="re_download_data">Re-download Data</string>
    <string name="choose_fishing_gear">-- Choose Fishing Gear --</string>
    <string name="update_offline_data">Update Offline Data</string>
    <string name="data_up_to_date">Data Up to date</string>
    <string name="data_too_old">Your data is too old. Please re-download the data</string>
    <string name="continue_exit">Exiting will delete all data that you have not validated to the server. Are you sure?</string>
    <string name="unknown_error">Unknown Error Occurred</string>
    <string name="not_found">Data not found</string>
    <string name="server_error">Server Error</string>
    <string name="io_error">Operation Error</string>
    <string name="information">Information</string>
    <string name="send_link_reset">Send a password reset link</string>
    <string name="please_wait">Please wait…</string>
    <string name="must_a_valid_email">Email must not be empty and email must be valid</string>
    <string name="reset_your_pass">Reset your password</string>
    <string name="your_email">Your Email</string>
    <string name="reset_pass">Send Password Reset Link</string>
</resources>