<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/bg_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/seafdec" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/kkp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alegreya_bold_italic"
            android:text="@string/dacofa"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <Button
            android:id="@+id/lihatData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#4CB050"
            android:text="@string/lihat_data"
            android:textAllCaps="true" />


        <Button
            android:id="@+id/isiData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#2196F3"
            android:text="@string/isi_data"
            android:textAllCaps="true" />


        <TextView
            android:id="@+id/privasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/privacy_policy"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/copyRight"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_sign_out_alt_solid" />

    <TextView
        android:id="@+id/copyRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:text="@string/copyright_2021"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>